# hub-intel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-brief.yml
context/: l2c_strategic.md
docs/: HUB-INTEL_2026-04-04.html  index.html
hub_intel/: __init__.py  agent.py  collector.py  config.py  notifier.py  publisher.py  renderer.py  synthesizer.py
reports/: HUB-INTEL_2026-04-04.md
templates/: brief_template.md
tests/: conftest.py  test_agent.py  test_collector.py  test_config.py  test_notifier.py  test_renderer.py  test_synthesizer.py
