[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hub-intel"
version = "2.0.0"
description = "HubSpot Competitive Intelligence Agent — weekly McKinsey-grade executive briefs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "slack-sdk>=3.27",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-mock>=3.12"]

[project.scripts]
hub-intel = "hub_intel.agent:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
